[package]
name = "replybot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
fern = "0.7.0"
futures = "0.3.31"
log = "0.4.22"
serde = "1.0.215"
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
reqwest = { version = "0.12.9", features = ["json", "gzip"] }
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-tracing = "0.5.4"
reqwest-retry = "0.7.0"
http = "1.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0.133"
lazy_static = "1.5.0"
zephyrus = "0.11.0"
aws-sdk-secretsmanager = "1.54.0"
aws-sdk-dynamodb = "1.55.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
cached = { version = "0.54.0" }
tracing = "0.1.41"
config = "0.14.1"
aws-config = "1.5.10"
async-trait = "0.1.83"
uuid = { version = "1.11.0", features = ["v4"] }
time = "0.3.37"

# [patch."https://github.com/Accurate0/foundation.git"]
# foundation = { path = "/home/anurag/Projects/foundation" }

[[bin]]
name = "replybot"
path = "src/main.rs"
