[package]
name = "replybot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
fern = "0.7.1"
futures = "0.3.31"
log = "0.4.25"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
reqwest = { version = "0.12.12", features = ["json", "gzip"] }
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-tracing = "0.5.5"
reqwest-retry = "0.7.0"
http = "1.2.0"
rand = { version = "0.9.0", features = ["small_rng"] }
serde_json = "1.0.138"
lazy_static = "1.5.0"
vesper = "0.13.0"
aws-sdk-secretsmanager = "1.61.0"
aws-sdk-dynamodb = "1.63.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
cached = { version = "0.54.0" }
tracing = "0.1.41"
config = "0.15.7"
aws-config = "1.5.15"
async-trait = "0.1.86"
uuid = { version = "1.12.1", features = ["v4"] }
time = "0.3.37"

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }

[[bin]]
name = "replybot"
path = "src/main.rs"
