[package]
name = "replybot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
fern = "0.7.1"
futures = "0.3.31"
log = "0.4.28"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
reqwest = { version = "0.12.24", features = ["json", "gzip"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-tracing = "0.5.8"
reqwest-retry = "0.8.0"
http = "1.4.0"
rand = { version = "0.9.2", features = ["small_rng"] }
serde_json = "1.0.145"
lazy_static = "1.5.0"
vesper = "0.13.0"
aws-sdk-secretsmanager = "1.95.0"
aws-sdk-dynamodb = "1.100.0"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
cached = { version = "0.56.0" }
tracing = "0.1.43"
config = "0.15.19"
aws-config = "1.8.11"
async-trait = "0.1.89"
uuid = { version = "1.19.0", features = ["v4"] }
time = "0.3.44"

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }

[[bin]]
name = "replybot"
path = "src/main.rs"
